# Metalurg_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_README.md  QUICKSTART_OPTIMIZATION.md  README.md  README_OPTIMIZATION_FINAL.md  TESTING.md  docker-compose.yml  example_optimization.py  main.py  pyproject.toml  pytest.ini  quick_test_optimization.py  requirements-dev.txt  requirements.txt  setup.py  source_data.csv  source_data.xls
.github/workflows/: tests.yml
examples/: example_optimization.py
test_metal/: __init__.py  __main__.py  config.py  features.py  io.py  modeling.py  optimization.py  pipeline.py  plotting.py  preprocessing.py  testing_utils.py
test_metal/core/: models.py  optimization.py  regression.py
test_metal/io/: __init__.py  excel.py  pdf.py  reports.py
tests/: conftest.py  smoke_run.py  test_cli.py  test_config.py  test_features.py  test_hypothesis.py  test_io_excel.py  test_io_pdf.py  test_io_reports.py  test_main.py  test_optimization_edge_cases.py  test_optimization_inverse.py  test_optimization_pareto.py  test_pipeline.py  test_plotting.py  test_preprocessing.py  test_regression.py  test_smoke.py
web/: docker-compose.yml
web/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  uvicorn_err.txt
web/backend/alembic/: env.py
web/backend/alembic/versions/: 9276470f670b_initial_schema.py
web/backend/app/: main.py
web/backend/app/api/: deps.py
web/backend/app/api/v1/: auth.py  datasets.py  health.py  optimizations.py  regressions.py  reports.py  router.py  tasks.py  ws.py
web/backend/app/core/: config.py  database.py  db_types.py  exceptions.py  logging_.py  metrics.py  security.py
web/backend/app/domain/: __init__.py  dataset.py  optimization.py  regression.py  task.py  user.py
web/backend/app/infrastructure/: redis_compat.py  storage.py  task_queue.py
web/backend/app/infrastructure/repositories/: __init__.py  dataset_repository.py  optimization_repository.py  regression_repository.py  task_repository.py
web/backend/app/schemas/: auth.py  common.py  dataset.py  optimization.py  regression.py  task.py
web/backend/app/services/: dataset_service.py  optimization_service.py  regression_service.py
web/backend/app/workers/: tasks.py
web/backend/tests/: conftest.py  test_auth.py  test_health.py  test_repositories.py  test_storage.py
web/frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/frontend/src/: App.js  App.tsx
web/frontend/src/api/: client.js  client.ts  endpoints.js  endpoints.ts
web/frontend/src/components/: Layout.js  Layout.tsx  ProtectedRoute.js  ProtectedRoute.tsx
web/frontend/src/contexts/: AuthContext.js  AuthContext.tsx
web/frontend/src/pages/: Dashboard.js  Dashboard.tsx  DatasetDetail.js  DatasetDetail.tsx  Datasets.js  Datasets.tsx  Login.js  Login.tsx  OptimizationDetail.js  OptimizationDetail.tsx  Optimizations.js  Optimizations.tsx  Register.js  Register.tsx  Tasks.js  Tasks.tsx
web/frontend/src/types/: index.ts
web/streamlit/: api_client.py  app.py  config.py
web/streamlit/pages/: 01_Login.py  02_Datasets.py  03_Dataset_Detail.py  04_Optimizations.py  05_Optimization_Detail.py  06_Tasks.py
