[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test-metal"
version = "1.0.0"
description = "Linear Regression & Optimization Framework for analyzing physicochemical properties of steel"
authors = [{ name = "KIRAZINA", email = "your.email@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["metallurgy", "regression", "optimization", "pareto", "steel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0,<3.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "hypothesis>=6.0",
    "structlog>=24.0",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/KIRAZINA/Metalurg_project"
Repository = "https://github.com/KIRAZINA/Metalurg_project"

[project.scripts]
test-metal = "test_metal.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["test_metal*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-ra",
    "--cov=test_metal",
    "--cov-fail-under=85",
    "--cov-report=term-missing",
]
markers = [
    "integration: Integration tests (slow)",
    "unit: Unit tests (fast)",
    "edge_case: Edge case tests",
    "pareto: Pareto optimization tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["examples/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "statsmodels.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["test_metal"]

[tool.coverage.run]
source = ["test_metal"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
