[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "testmetal-api"
version = "1.0.0"
description = "Test Metal Web API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiobotocore>=2.13.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "limits>=3.11.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk>=2.3.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
prod = []
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "alembic>=1.13.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM"]
ignore = ["E501", "B008", "N818", "F811", "SIM105"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disable_error_code = ["type-arg", "var-annotated", "no-untyped-def", "no-untyped-call", "attr-defined", "arg-type", "return-value"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
